[package]
name = "rvpacker-txt-rs-lib"
version = "13.0.0"
authors = ["savannstm <savannstm@gmail.com>"]
edition = "2024"
rust-version = "1.87.0"
description = "Library that allows you to generate text files from RPG Maker files."
documentation = "https://docs.rs/rvpacker-txt-rs-lib"
readme = "README.md"
repository = "https://github.com/savannstm/rvpacker-txt-rs-lib"
license-file = "LICENSE.md"

[dependencies]
encoding_rs = "0.8.35"
flate2 = "1.1.9"
indexmap = "2.14.0"
marshal-rs = "2.0.1"
regex = "1.12.3"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde = { version = "1.0.228" }
phf = { version = "0.13.1", features = ["macros"] }
smallvec = "1.15.1"
gxhash = { version = "3.5.0", features = ["deterministic"] }
const_format = "0.2.36"
bitflags = { version = "2.11.1", features = ["serde"] }
strum_macros = "0.28.0"
thiserror = "2.0.18"
num_enum = "0.7.6"
log = "0.4.29"
strum = { version = "0.28.0", features = ["strum_macros"] }
